--- a/src/modules/header/header.css
+++ b/src/modules/header/header.css
@@ -15,7 +15,7 @@
 
 .header-content {
   margin-top: 80px;
-  min-height: calc(100vh - 80px);
+  
   display: flex;
   justify-content: space-between;
   align-items: center;
