--- a/src/modules/login/components/login.css
+++ b/src/modules/login/components/login.css
@@ -70,7 +70,7 @@ input[type="radio"] {
 }
 
 /* Submit button styles */
-button {
+.login {
     width: 100%;
     padding: 12px;
     border: none;
